Hide x overflow on the body and stop the logo from getting too big

--- a/navbar.css
+++ b/navbar.css
@@ -46,6 +46,9 @@
         left:auto;
 	}
 }
+.image-responsive{
+    max-width: 100%;
+}
 .navbar {
     background-color: #f2f2f2;
     box-shadow: 0 0 3px rgb(0 0 0 / 20%);
